# C-CPP-Homework

./: .travis.yml  CMakeLists.txt  README.md  input.txt  lesson.c  lesson.h  main.c  test.cpp  test1.txt  testing.c  testing.h  timetable.c  timetable.h
